Final game
Readme included.
Some comments added.
Some sizes according to the screen dimensions.
Now it detects when a player falls down and tries to recover its
position.